INCLUDE_DIRECTORIES(/usr/include)
ADD_EXECUTABLE(curltest main.c)
#TARGET_LINK_LIBRARIES(curltest curl)
FIND_PACKAGE(CURL)
IF(CURL_FOUND)
    MESSAGE(STATUS "CURL include dir: ${CURL_INCLUDE_DIR}")
    MESSAGE(STATUS "CURL library dir: ${CURL_LIBRARY}")
    INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(curltest ${CURL_LIBRARY})
ELSE()
    MESSAGE(FATAL_ERROR "CURL library not found")
ENDIF()
